# resume-cooker

./: .gitignore  .prettierignore  ARCHIVE-MANIFEST.md  LINUX_COMPATIBILITY.md  MACOS_COMPATIBILITY.md  README.md  eslint.config.js  package-lock.json  package.json  ui-design.md
.github/workflows/: ci.yml
checker/scripts/: api-analysis.mjs  api-analysis.test.mjs  api-providers.mjs  api-providers.test.mjs  check.mjs  (+16 more)
docs/: ats-testing-methods.md  evaluation-suites.md  hunt-c2-integration-notes.md  product-decisions.md  resume-quality-criteria.md  roadmap.md  tester-sources.md
fixtures/: resume_extracted_text.txt  software_engineering_intern_jd.txt
generator/: README.md
testers/: README.md  manifest.json
testers/ResumeParser/: .gitignore  README.md  pyproject.toml  requirements.txt
testers/ResumeParser/.github/workflows/: pylint.yml  tests.yml
testers/ResumeParser/.pylint.d/: resume_parser_1.stats
testers/ResumeParser/resume_parser/: __init__.py  __main__.py  cli.py
testers/ResumeParser/resume_parser/data/: skills_master.json
testers/ResumeParser/resume_parser/extractors/: education_extractor.py  experience_extractor.py
testers/ResumeParser/resume_parser/utils/: display.py  file_reader.py  skills_checker.py
testers/ResumeParser/tests/: conftest.py  test_cli_integration.py  test_education_extractor.py  test_experience_extractor.py  test_regex_helpers.py  test_section_finder.py  test_skills_checker.py  test_skills_list_loader.py  test_summary_extractor.py  test_text_normalizer.py
testers/ResumeParser/tests/data/job_descriptions/: sample_job.txt
(+209 files in other folders)
