[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resume_parser"
version = "0.1.3"
description = "A tool for parsing and analyzing technical resumes"
authors = [
    { name="Sara", email="sara@digitalresumesolutions.org" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich==13.7.1",
    "pyfiglet>=1.0.4",
    "pdfplumber==0.10.3",
    "python-docx==1.1.0",
    "mammoth==1.11.0",
    "pypandoc==1.13",
    "pdf2image==1.17.0",
    "pytesseract==0.3.10",
]
license = { file = "LICENSE" }

[project.scripts]
resume-parser = "resume_parser.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["resume_parser*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "setuptools"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
